--- a/about.html
+++ b/about.html
@@ -1,1 +1,12 @@
-
+                                                                                                                                                                             <!DOCTYPE html>
+                                                                                                                                                                             <html lang="en">
+                                                                                                                                                                             <head>
+                                                                                                                                                                                <meta charset="UTF-8">
+                                                                                                                                                                                <meta name="viewport" content="width=device-width, initial-scale=1.0">
+                                                                                                                                                                                <title>Document</title>
+                                                                                                                                                                             </head>
+                                                                                                                                                                             <body>
+                                                                                                                                                                             <p> Hi my name is John I am doing this webside to show my favotite movie. </p>
+                                                                                                                                                                            <img src = "https://static.wikia.nocookie.net/bluelock/images/0/07/Blue_Lock_TV_Anime_2nd_Season_Key_Visual.png/revision/latest/scale-to-width/360?cb=20240530110013">
+                                                                                                                                                                             </body>
+                                                                                                                                                                             </html>                                                                   
